--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
                 tools:ignore="ContentDescription" />
 
             <ImageView
-                android:id="@+id/btn_chats"
+                android:id="@+id/btn_groups"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
